--- a/src/components/ShopNow.css
+++ b/src/components/ShopNow.css
@@ -2,16 +2,18 @@ video {
   object-fit: cover;
   width: 100%;
   height: 100hv;
-  position: fixed;
+  position: absolute;
   z-index: -1;
+  left: 0;
+  top: 0;
 }
 
 .hero-container {
-  background: url('./img-9.jpg') center center/cover no-repeat;
+  /**background: url('./img-9.jpg') center center/cover no-repeat; **/
   height: 100vh;
   width: 100%;
   display: flex;
-  padding-top: 100px;
+  padding-top: 30px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -20,14 +22,14 @@ video {
 }
 
 .hero-container > h1 {
-  color: black;
-  font-size: 100px;
+  color: white;
+  font-size: 90px;
   margin-top: -100px;
 }
 
 .hero-container > p {
   margin-top: 8px;
-  color: black;
+  color: white;
   font-size: 32px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
@@ -45,21 +47,35 @@ video {
   margin-left: 4px;
 }
 
+
+
 @media screen and (max-width: 960px) {
   .hero-container > h1 {
-    font-size: 70px;
-    margin-top: -150px;
+    font-size: 40px;
+    margin-top: -80px;
+  }
+  .hero-container > p {
+    font-size: 30px;
+  }
+
+  .hero-container {
+    /**background: url('./img-9.jpg') center center/cover no-repeat; **/
+    height: 40vh;
+    width: 100%;
+    display: flex;
+    padding-top: 90px;
+    
   }
 }
 
 @media screen and (max-width: 768px) {
   .hero-container > h1 {
-    font-size: 50px;
+    font-size: 30px;
     margin-top: -100px;
   }
 
   .hero-container > p {
-    font-size: 30px;
+    font-size: 20px;
   }
 
   .btn-mobile {
